# j-quants-api-mcp

./: .gitignore  README.md  pyproject.toml
src/j_quants_api_mcp/: cli.py  client.py  convert.py  errors.py  server.py
src/j_quants_api_mcp/tools/: bulk.py  classification.py  derivatives.py  equity.py  financial.py  index.py  market.py
tests/: test_drv_bars_daily_fut_contract.py  test_drv_bars_daily_opt_225_contract.py  test_drv_bars_daily_opt_contract.py  test_eq_bars_daily_am_contract.py  test_eq_bars_daily_contract.py  test_eq_bars_minute_contract.py  test_eq_earnings_cal_contract.py  test_eq_investor_types_contract.py  test_eq_master_contract.py  test_fastmcp_alias_regression.py  test_fin_details_contract.py  test_fin_dividend_contract.py  test_fin_summary_contract.py  test_idx_bars_daily_contract.py  test_idx_bars_daily_topix_contract.py  test_mkt_breakdown_contract.py  test_mkt_cal_contract.py  test_mkt_margin_alert_contract.py  test_mkt_margin_int_contract.py  test_mkt_short_ratio_contract.py  test_mkt_short_sale_contract.py  test_tool_surface_contract.py
